--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
   <!-------------nav--------------->
   <nav class="navbar  navbar-expand-lg navbar-light bg-light sticky-top">
-      <img id="logo_img" class="ml-5 mr-5" src="images/1.png" alt="saylani-logo">
+      <img id="logo_img" class="ml-5 mr-5" src="1.png" alt="saylani-logo">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -123,13 +123,13 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="images/congrats.jpeg" class="d-block w-100 h-50" alt="...">
+        <img src="congrats.jpeg" class="d-block w-100 h-50" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="images/22.jpeg" class="d-block w-100 h-50" alt="...">
+        <img src="22.jpeg" class="d-block w-100 h-50" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="images/saylani image 4.jpg" class="d-block w-100 h-50" alt="...">
+        <img src="saylani image 4.jpg" class="d-block w-100 h-50" alt="...">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -252,7 +252,7 @@
         <div class="row">
             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                 <div class="employees">
-                    <img class="c-img" src="images/icon_food_png.png" alt="">
+                    <img class="c-img" src="icon_food_png.png" alt="">
                     <br>
                     <p class="counter-count">125000</p>
                     <p class="employee-p">DAILY DASTRAKHAN <span  style="color: #00FF00; font-size: 20px; font-weight: 600;">(MONTHLY)</span></p>            
@@ -260,7 +260,7 @@
             </div>
             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                 <div class="customer">
-                    <img class="c-img" src="images/icon_family_png.png" alt="">
+                    <img class="c-img" src="icon_family_png.png" alt="">
                     <br>
                     <p class="counter-count">7500</p>
                     <p class="customer-p">FAMILY ADOPTION <span style="color: #00FF00; font-size: 20px; font-weight: 600;">(MONTHLY)</span></p>                           
@@ -268,7 +268,7 @@
             </div>
             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                 <div class="design">
-                    <img class="c-img" src="images/icon_medical_png.png" alt="">
+                    <img class="c-img" src="icon_medical_png.png" alt="">
                     <br>
                     <p class="counter-count">43749</p>
                     <p class="design-p">MEDICAL <span style="color: #00FF00; font-size: 20px; font-weight: 600;">(MONTHLY)</span></p>                          
@@ -276,7 +276,7 @@
             </div>
             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                 <div class="order">
-                    <img class="c-img" src="images/icon_education_png.png" alt="">
+                    <img class="c-img" src="/icon_education_png.png" alt="">
                     <br>
                     <p class="counter-count">180000</p>
                     <p class="order-p">EDUCATION <span  style="color: #00FF00; font-size: 20px; font-weight: 600;">(MONTHLY)</span>                          
@@ -294,7 +294,7 @@
             <div class="col-sm-12  center">
                 <h2 class="text-uppercase"><span style="color: #316dc3;">WHAT WE</span><span
                         style="color: #427900;"> ARE DOING?</span></h2>
-                <center> <img src="images/introduction.jpg" alt=""> </center>
+                <center> <img src="introduction.jpg" alt=""> </center>
             </div>
         </div>
     </div>
@@ -303,27 +303,27 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-3 shadow p-3 mrgn bg-white rounded">
-                    <img src="images/onlinesadqah.png" alt="" width="70px" class="pb-3">
+                    <img src="onlinesadqah.png" alt="" width="70px" class="pb-3">
                   <h4 class="clr-nblue">ONLINE SADQAH</h4>
                 </div>
                 <div class="col-sm-3 shadow p-3 mrgn bg-white rounded">
-                    <img src="images/welfare.png" alt="" width="70px" class="pb-3">
+                    <img src="welfare.png" alt="" width="70px" class="pb-3">
                   <h4 class="clr-nblue">WELFARE</h4>
                 </div>
                 <div class="col-sm-3 shadow p-3 mrgn bg-white rounded">
-                    <img src="images/medical.png" alt="" width="70px" class="pb-3">
+                    <img src="medical.png" alt="" width="70px" class="pb-3">
                   <h4 class="clr-nblue">MEDICAL</h4>
                 </div>
                 <div class="col-sm-3 shadow p-3 mrgn bg-white rounded">
-                    <img src="images/Dastarkhwan.png" alt="" width="70px" class="pb-3">
+                    <img src="Dastarkhwan.png" alt="" width="70px" class="pb-3">
                   <h4 class="clr-nblue">DASTARKHWAN</h4>
                 </div>
                 <div class="col-sm-3 shadow p-3 mrgn bg-white rounded">
-                    <img src="images/ROPLANT.png" alt="" width="70px" class="pb-3">
+                    <img src="ROPLANT.png" alt="" width="70px" class="pb-3">
                   <h4 class="clr-nblue">RO PLANT</h4>
                 </div>
                 <div class="col-sm-3 shadow p-3 mrgn bg-white rounded">
-                    <img src="images/education-icon.png" alt="" width="70px" class="pb-3">
+                    <img src="education-icon.png" alt="" width="70px" class="pb-3">
                   <h4 class="clr-nblue">EDUCATION</h4>
                 </div>
             </div>
@@ -339,20 +339,20 @@
                 <h3 class="text-uppercase"><span style="color: #316dc3;">MISSION AND UPCOMING PROJECTS  </h3>
                     <div class="row split">
                         <div class="col-sm-5 p-3 m-2 bg-light">
-                      <a class="media-left pull-left flip" href="#"><img src="images/Hepatitis.png" alt=""></a>  
+                      <a class="media-left pull-left flip" href="#"><img src="Hepatitis.png" alt=""></a>  
                      <h5>HEPATITIS</h5> 
                         </div>
                         <div class="col-sm-5 p-3 m-2 bg-light">
-                            <a class="media-left pull-left flip" href="#"><img src="images/housing.png" alt=""></a> 
+                            <a class="media-left pull-left flip" href="#"><img src="housing.png" alt=""></a> 
                             <h5>HOUSING SOCIETY </h5>
                          </div>
                          <div class="col-sm-5 p-3 m-2 bg-light">
-                            <a class="media-left pull-left flip" href="#"><img src="images/IT.png" alt=""></a> 
+                            <a class="media-left pull-left flip" href="#"><img src="IT.png" alt=""></a> 
                             <h5>IT LITERACY</h5>
                          </div>
 
                          <div class="col-sm-5 p-3 m-2 bg-light">
-                            <a class="media-left pull-left flip" href="#"><img src="images/tharparkar.png" alt=""></a> 
+                            <a class="media-left pull-left flip" href="#"><img src="tharparkar.png" alt=""></a> 
                             <h5>THARPARKAR</h5>
                          </div>
                     </div>
@@ -379,32 +379,32 @@
         <div class="row">
             <div class="col-md-6 col-sm-12 col-lg-4 item">
                 <a class="lightbox" href="images/pic1.jpg">
-                    <img class="img-fluid image scale-on-hover" src="images/pic1.jpg">
+                    <img class="img-fluid image scale-on-hover" src="pic1.jpg">
                 </a>
             </div>
             <div class="col-md-6 col-sm-12 col-lg-4 item">
                 <a class="lightbox" href="images/pic2.jpg">
-                    <img class="img-fluid image scale-on-hover" src="images/pic2.jpg">
+                    <img class="img-fluid image scale-on-hover" src="pic2.jpg">
                 </a>
             </div>
             <div class="col-md-6 col-sm-12 col-lg-4 item">
                 <a class="lightbox" href="images/11.jpg">
-                    <img class="img-fluid image scale-on-hover" src="images/11.jpg">
+                    <img class="img-fluid image scale-on-hover" src="11.jpg">
                 </a>
             </div>
             <div class="col-md-6 col-sm-12 col-lg-4 item">
                 <a class="lightbox" href="images/pic1.jpg">
-                    <img class="img-fluid image scale-on-hover" src="images/pic1.jpg">
+                    <img class="img-fluid image scale-on-hover" src="pic1.jpg">
                 </a>
             </div>
             <div class="col-md-6 col-sm-12 col-lg-4 item">
                 <a class="lightbox" href="images/pic4.jpg">
-                    <img class="img-fluid image scale-on-hover" src="images/pic4.jpg">
+                    <img class="img-fluid image scale-on-hover" src="pic4.jpg">
                 </a>
             </div>
             <div class="col-md-6 col-sm-12 col-lg-4 item">
                 <a class="lightbox" href="images/pic1.jpg">
-                    <img class="img-fluid image scale-on-hover" src="images/pic1.jpg">
+                    <img class="img-fluid image scale-on-hover" src="pic1.jpg">
                 </a>
             </div>
         </div>
